objects/AcctSeed__Payment_Method__c.object
<CustomObject>
    <description>Used to document the means of payment. </description>
    <fields>
        <fullName>AcctSeed__Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AcctSeed__Payment_Method_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Card_Holder_Name__c</fullName>
        <label>Account Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Expiration_Month__c</fullName>
        <label>Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Expiration_Year__c</fullName>
        <label>Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AcctSeed__Last_Four_Digits__c</fullName>
        <label>Last Four Digits </label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Payment_Method_Type__c</fullName>
        <label>Payment Method Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                    <default>true</default>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>Bank Account</fullName>
                    <label>Bank</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Routing_Number__c</fullName>
        <description>An ABA routing transit number (ABA RTN) is a nine-digit code, used in the United States, which appears on the bottom of negotiable instruments such as checks to identify the financial institution on which it was drawn.</description>
        <inlineHelpText>An ABA routing transit number (ABA RTN) is a nine-digit code, used in the United States, which appears on the bottom of negotiable instruments such as checks to identify the financial institution on which it was drawn.</inlineHelpText>
        <label>Routing Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                    <default>true</default>
                    <label>Visa</label>
                </value>
                <value>
                    <fullName>MasterCard</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Verification_Status__c</fullName>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>new</fullName>
                </value>
                <value>
                    <fullName>validated</fullName>
                </value>
                <value>
                    <fullName>verified</fullName>
                </value>
                <value>
                    <fullName>verification_failed</fullName>
                </value>
                <value>
                    <fullName>errored</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Customer__c</columns>
        <columns>AcctSeed__Default__c</columns>
        <columns>AcctSeed__Card_Holder_Name__c</columns>
        <columns>AcctSeed__Expiration_Month__c</columns>
        <columns>AcctSeed__Expiration_Year__c</columns>
        <columns>AcctSeed__External_Id__c</columns>
        <columns>AcctSeed__Last_Four_Digits__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{00000}</displayFormat>
        <label>Payment Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>